Removed github chart

--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -179,15 +179,16 @@
 				{% endfor %}
 			</div>
 
-            <div id="content">
+            <!-- REMOVED because API is no longer working -->
+            <!-- <div id="content">
                 <div class="p-3 mb-2 calendar">
                     <h3>My Github Activity</h3>
                     <center>
                         <img class="github-calendar" src="http://ghchart.rshah.org/2a4933/{{ about_me.github_handle }}"
-                            alt="scott-w-maxwell's Github chart" />
+                            alt="{{ about_me.github_handle }}'s Github chart" />
                     </center>
                 </div>
-            </div>
+            </div> -->
 
 			<div id="content">
                 <div class="p-3 mb-2" style="border-radius:10px; overflow:hidden;">
