Re-added Github Chart as dependencies were updated

--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -179,8 +179,7 @@
 				{% endfor %}
 			</div>
 
-            <!-- REMOVED because API is no longer working -->
-            <!-- <div id="content">
+            <div id="content">
                 <div class="p-3 mb-2 calendar">
                     <h3>My Github Activity</h3>
                     <center>
@@ -188,7 +187,7 @@
                             alt="{{ about_me.github_handle }}'s Github chart" />
                     </center>
                 </div>
-            </div> -->
+            </div>
 
 			<div id="content">
                 <div class="p-3 mb-2" style="border-radius:10px; overflow:hidden;">
